Suivi des principales révisions - Version ACS actuelle : 0.7.2

ACS version 0.7
 - changement des chemins d'images installées par les composants : img->IMG
 - affichage du commentaire du composant en info-bulle sur le schéma de la page
 - installation automatique de mots-clefs de composants
 - option _ACS_LOG dans acs_options.php pour gérer activation / désactivation des logs ACS
 - fonction sauvegarder / restaurer la configuration d'un modèle ACS
 - suppression du numero de release d'ACS dans plugin.xml et partout ailleurs
 - changement du schéma composant.xml : une valeur par défaut héritée se note désormais "=acsComposantVariable" et non plus  "acsComposantVariable, par souci de cohérence avec l'affectation de valeurs de propriétés héritées. 
 - changement de syntaxe pour les variables de type "bord" : #VAR{acsComposantBord/Width} au lieu  de #VAR{acsComposantBordWidth} et modification de la balise VAR pour tenir compte de ce cas récursivement
 - changement d'algorithme de l'analyseur de page afin d'éviter les erreurs sur de trop grosses regexp
 - amélioration du drag/drop des composants dans la partie privee
 - balises #ACS_VERSION et #ACS_RELEASE, permettant de faire des composants multi-versions
 - Nouveau type de variable : key (mot-clef)
 
Modele Cat pour ACS vesion 0.7 :
 - transformation de TOUTES les pages du modèle (squelette) "cat" en pages constituées uniquement de modules (en cours)
 - modification de la feuille de style habillage.css.html, qui se contente desormais d'appeller les feuilles de style des composants.
 - composants contextuels : les composants breves, forums, keys,rubnav et syndic affichent des resultats contextuels selon l page où ils sont utilisés. Par exemple, sur la page de resultats d'une recherche, ils donnent le résultat de la recherche.
 - modele doc_player : reactualisation
 - Mise à jour de TOUS les composants (en cours)
 - Audio : toilettage du composant / nouveau modèle. drag/drop sur le slider