@@ -1,0 +1,8 @@
+#CACHE{0}
+.cAuteur .entete .titre,.cAuteur .entete .sous-titre, .cAuteur .texte {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.cAuteur .texte {
+  text-align: justify;
+}
