@@ -1,3 +1,4 @@
+&Nom&
 <table>
   <tr><th><:acs:composant:></th><th><:style:></th></tr>
   <tr><td>&1&</td><td>&1style&</td></tr>
@@ -30,5 +31,3 @@
   <tr><td>&ShadowSize&</td><td>&nbsp;px</td></tr>
   <tr><td>&ShadowBlur&</td><td>&nbsp;px</td></tr>
 </table>
-<hr />
-&Comment&
