@@ -151,7 +151,7 @@
   </variable>
   
   <variable>
-    <nom>Comment</nom>
-    <type>textarea</type>
+    <nom>Nom</nom>
+    <type>text</type>
   </variable>
 </composant>
