@@ -1,7 +1,17 @@
+&Nom&
 <table><tr><td>&TitreFond&</td><td>&TitreFondImage&</td></tr></table>
 &Fond&
 &Bord&
+&BordRond&
+<hr />
+&Shadow&
+<table>
+  <tr><td>&ShadowSize&</td><td>&nbsp;px</td></tr>
+  <tr><td>&ShadowBlur&</td><td>&nbsp;px</td></tr>
+</table>
 <hr />
 &Type&
+&SouligneRub&
+&SouligneRubHeight&
 &Key&
 &Nb&
