@@ -4,10 +4,13 @@
 $GLOBALS[$GLOBALS['idx_lang']] = array(
 
 'nom' => 'Encart',
-'description' => 'Blocks of last published articles with selected keyword.',
+'description' => 'Blocks of last published articles or of last published articles in section(s) with selected keyword.',
 
 'Type' => 'Type',
 'TypeArticles' => _T('articles'),
 'TypeRubriques' => _T('rubriques'),
+
+'SouligneRub' => 'underline section',
+'SouligneRubHeight' => 'Section underline height'
 );
 ?>
