@@ -4,11 +4,13 @@
 $GLOBALS[$GLOBALS['idx_lang']] = array(
 
 'nom' => 'Encart',
-'description' => 'Encart des derniers articles publiés avec le mot-clef choisi.',
+'description' => 'Encart des derniers articles publiés avec le mot-clef choisi ou des derniers articles des rubriques ayant le mot-clef choisi.',
 
 'Type' => 'Type',
 'TypeArticles' => _T('articles'),
 'TypeRubriques' => _T('rubriques'),
 
+'SouligneRub' => 'Souligner la rubrique',
+'SouligneRubHeight' => 'Hauteur du soulignement'
 );
 ?>
