@@ -1,5 +1,5 @@
 [(#VAR{#EVAL{'acsEncart'.'#NIC'.'Use'}}|=={oui}|?{' '})
-<div class="#PINCEAU{encart}">
+<div class="#PINCEAU{encart, #NIC}">
   [(#VAR{#EVAL{'acsEncart'.'#NIC'.'Type'}}|=={articles}|?{' '})
     [(#VAR{acsDemocratieUse}|=={oui}|?{' '}) <INCLURE{fond=composants/encart/inc-encart_articles-democratie}{nic}{lang}>][(#REM) Encart si composant democratie activé]
     [(#VAR{acsDemocratieUse}|!={oui}|?{' '}) <INCLURE{fond=composants/encart/inc-encart_articles}{nic}{lang}>][(#REM) Encart si composant democratie inactif]
