@@ -25,7 +25,7 @@ La definition fontsize ci-dessous est un hack : Cf.: http://pompage.net/pompe/de
 body {
   margin : 0;
   padding: 0;
-  font-size: #VAR{acsFondPoesieFontSize, 1.05em};
+  font-size: #VAR{acsFondFontSize, 0.88em};
   font-family: [(#VAR{acsFondFont,Verdana, 'Trebuchet MS', Arial, 'Lucida Sans'}),][ (#VAR{acsFondFontFamily,sans-serif})];
   [background: (#VAR{acsFondColor})[ url('[(#ACS_CHEMIN)]trame/(#VAR{acsFondImage})') repeat];]
   [color: (#VAR{acsFondText});]
