@@ -30,6 +30,7 @@
 
   <div class="tsize">Titre</div>
   <div class="stsize">Sous-titre</div>
+  <div>Texte de taille normale</div>
   
   <div style="clear:both;text-align: #LANG_LEFT">
   <span style="color:#afafaf">&lt;poesie&gt;</span>
