@@ -6,7 +6,8 @@
   [border-width: (#VAR{acsMailBord/Width});]
   [border-style: (#VAR{acsMailBord/Style});]
   [border-color: (#VAR{acsMailBord/Color});]
-  [background: (#VAR{acsMailFond})]
+  [background: (#VAR{acsMailFond})];
+  font-size: #VAR{acsFondBlosSize,0.82em};
 }
 .cMail .formulaire_spip legend {
   [border-width: (#VAR{acsMailBord/Width});]
